--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
   "author": "Gede Ryan",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-validator": "^6.2.0",
     "get-urls": "^9.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.7",
     "node-fetch": "^2.6.0",
     "puppeteer": "^2.0.0",
